# snyk-python-plugin

./: README.md
lib/: types.ts
test/fixtures/pdm-project/: pyproject.toml
test/system/: inspect.spec.ts
test/workspaces/pdm-app/: pyproject.toml
