[project]
name = "pdm-test-app"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "flask>=1.0.3",
    "MarkupSafe>=2.1.1",
]
license = {text = "MIT"}
requires-python = ">=3.7"
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
