[project]
name = "pdm-fixtures-project"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "jinja2>=2.11,<3.0",
]
license = {text = "MIT"}
requires-python = ">=3.7"
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
